--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ get_filename_component(OMIM_ROOT . ABSOLUTE)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OMIM_ROOT}/cmake")
 
 include(OmimHelpers)
-include(BuildVersion)
 include(BundledBoost)
 
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
@@ -338,8 +337,10 @@ if (PLATFORM_ANDROID)
 endif()
 
 add_custom_target(BuildVersion ALL
-  COMMAND
-  ${CMAKE_COMMAND}
-  -DOMIM_ROOT="${OMIM_ROOT}"
+  COMMAND ${CMAKE_COMMAND}
+  ARGS
+  -D MAPSME_CURRENT_PROJECT_ROOT=${OMIM_ROOT}
+  -D PATH_WITH_BUILD_VERSION_HPP=${OMIM_ROOT}
+  -D PROJECT_NAME=${PROJECT_NAME}
   -P ${OMIM_ROOT}/cmake/BuildVersion.cmake
 )
