--- a/build_version.hpp.in
+++ b/build_version.hpp.in
@@ -10,7 +10,9 @@ namespace build_version
 namespace git
 {
 constexpr char const * const kHash = "@GIT_HASH@";
+constexpr char const * const kTag = "@GIT_TAG@";
 constexpr uint64_t kTimestamp = @GIT_TIMESTAMP@;
+constexpr char const * const kProjectName = "@PROJECT_NAME@";
 }  // namespace git
 }  // namespace build_version
 }  // namespace omim
