--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,6 +263,7 @@ add_subdirectory(editor)
 add_subdirectory(generator/mwm_diff)
 add_subdirectory(geometry)
 add_subdirectory(indexer)
+add_subdirectory(kml)
 add_subdirectory(map)
 add_subdirectory(platform)
 add_subdirectory(routing)
