--- a/search/search_tests/CMakeLists.txt
+++ b/search/search_tests/CMakeLists.txt
@@ -36,6 +36,7 @@ omim_link_libraries(
   search_tests_support
   generator_tests_support
   platform_tests_support
+  kml
   search
   editor
   indexer
