--- a/geocoder/CMakeLists.txt
+++ b/geocoder/CMakeLists.txt
@@ -1,7 +1,5 @@
 project(geocoder)
 
-include_directories(${OMIM_ROOT}/3party/jansson/src)
-
 set(
   SRC
   geocoder.cpp
@@ -23,6 +21,7 @@ set(
 )
 
 omim_add_library(${PROJECT_NAME} ${SRC})
+omim_link_libraries(${PROJECT_NAME} base indexer jansson)
 
 add_subdirectory(geocoder_cli)
 omim_add_test_subdirectory(geocoder_tests)
