--- a/indexer/CMakeLists.txt
+++ b/indexer/CMakeLists.txt
@@ -1,7 +1,5 @@
 project(indexer)
 
-include_directories(${OMIM_ROOT}/3party/protobuf/protobuf/src)
-
 set(
   SRC
   altitude_loader.cpp
@@ -147,5 +145,12 @@ set(
 file(COPY ${OTHER_FILES} DESTINATION ${CMAKE_BINARY_DIR})
 
 omim_add_library(${PROJECT_NAME} ${SRC})
-
+omim_link_libraries(${PROJECT_NAME}
+  base
+  coding
+  geometry
+  platform
+  succinct
+  protobuf
+)
 omim_add_test_subdirectory(indexer_tests)
