--- a/3party/protobuf/CMakeLists.txt
+++ b/3party/protobuf/CMakeLists.txt
@@ -1,6 +1,5 @@
 project(protobuf)
 
-include_directories(. protobuf/src ../../)
 
 if (NOT PLATFORM_WIN)
   add_definitions(-DHAVE_PTHREAD)
@@ -36,3 +35,4 @@ set(
 )
 
 add_library(${PROJECT_NAME} ${SRC})
+target_include_directories(${PROJECT_NAME} PUBLIC . protobuf/src ../../)
