--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -185,6 +185,18 @@ set(
 )
 
 omim_add_library(${PROJECT_NAME} ${SRC})
+omim_link_libraries(${PROJECT_NAME}
+  base
+  coding
+  indexer
+  platform
+  geometry
+  jansson
+  tess2
+  expat
+)
+
+
 
 omim_add_test_subdirectory(generator_tests_support)
 omim_add_test_subdirectory(generator_tests)
