rm qt; stubs for platform_std

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -2,12 +2,8 @@ project(platform)
 
 include_directories(${OMIM_ROOT}/platform)
 
-set(CMAKE_AUTOMOC ON)
-
 set(
   SRC
-  battery_tracker.cpp
-  battery_tracker.hpp
   chunks_download_strategy.cpp
   chunks_download_strategy.hpp
   constants.hpp
@@ -19,7 +15,6 @@ set(
   file_logging.hpp
   get_text_by_id.cpp
   get_text_by_id.hpp
-  gui_thread.hpp
   http_client.cpp
   http_client.hpp
   http_request.cpp
@@ -33,8 +28,6 @@ set(
   local_country_file_utils.cpp
   local_country_file_utils.hpp
   localization.hpp
-  marketing_service.cpp
-  marketing_service.hpp
   measurement_utils.cpp
   measurement_utils.hpp
   mwm_traits.cpp
@@ -57,89 +50,39 @@ set(
   string_storage_base.hpp
 )
 
-if(${PLATFORM_IPHONE})
+append(
+  SRC
+  http_user_agent_dummy.cpp
+  localization_dummy.cpp
+  network_policy_dummy.cpp
+  platform_std.cpp
+  wifi_info.hpp
+)
+
+if(${PLATFORM_MAC})
   append(
     SRC
-    gui_thread_apple.mm
+    http_client_apple.mm
     http_thread_apple.h
     http_thread_apple.mm
-    http_client_apple.mm
     http_uploader_apple.mm
-    http_user_agent_ios.mm
-    localization.mm
-    marketing_service_ios.mm
-    network_policy_ios.h
-    network_policy_ios.mm
-    platform_ios.mm
-    platform_unix_impl.cpp
-    platform_unix_impl.hpp
-    secure_storage_ios.mm
-    socket_apple.mm
-  )
-elseif(${PLATFORM_ANDROID})
-  append(
-    SRC
-    platform_android.cpp
-    platform_unix_impl.cpp
-    platform_unix_impl.hpp
-  )
-else() # neither iPhone nor Android
-  append(
-    SRC
     http_user_agent_dummy.cpp
-    localization_dummy.cpp
-    marketing_service_dummy.cpp
-    network_policy_dummy.cpp
-    platform_qt.cpp
-    wifi_info.hpp
+    platform_mac.mm
+    platform_unix_impl.cpp
+    platform_unix_impl.hpp
+    socket_apple.mm
+    http_session_manager.mm
   )
-
-  if (${PLATFORM_WIN})
-    append(
-      SRC
-      http_client_curl.cpp
-      http_user_agent_dummy.cpp
-      http_thread_qt.cpp
-      http_thread_qt.hpp
-      http_uploader_dummy.cpp
-      marketing_service_dummy.cpp
-      platform_win.cpp
-      secure_storage_dummy.cpp
-      wifi_info_windows.cpp
-    )
-  elseif(${PLATFORM_MAC})
-    append(
-      SRC
-      gui_thread_apple.mm
-      http_client_apple.mm
-      http_thread_apple.h
-      http_thread_apple.mm
-      http_uploader_apple.mm
-      http_user_agent_dummy.cpp
-      marketing_service_dummy.cpp
-      platform_mac.mm
-      platform_unix_impl.cpp
-      platform_unix_impl.hpp
-      secure_storage_qt.cpp
-      socket_apple.mm
-      http_session_manager.mm
-    )
-  elseif(${PLATFORM_LINUX})
-    append(
-      SRC
-      gui_thread_linux.cpp
-      http_client_curl.cpp
-      http_thread_qt.cpp
-      http_thread_qt.hpp
-      http_uploader_dummy.cpp
-      http_user_agent_dummy.cpp
-      marketing_service_dummy.cpp
-      platform_linux.cpp
-      platform_unix_impl.cpp
-      platform_unix_impl.hpp
-      secure_storage_qt.cpp
-    )
-  endif()
+elseif(${PLATFORM_LINUX})
+  append(
+    SRC
+    http_client_curl.cpp
+    http_uploader_dummy.cpp
+    http_user_agent_dummy.cpp
+    platform_linux.cpp
+    platform_unix_impl.cpp
+    platform_unix_impl.hpp
+  )
 endif()
 
 add_subdirectory(platform_tests_support)
@@ -150,10 +93,6 @@ omim_link_libraries(${PROJECT_NAME} base coding jansson)
 
 if (APPLE)
   target_compile_options(${PROJECT_NAME} PUBLIC "-fobjc-arc")
-endif()
-
-if (PLATFORM_LINUX)
-  link_qt5_network(${PROJECT_NAME})
 endif()
 
 omim_add_test_subdirectory(platform_tests)
