[geocoder] Add name index file format

--- a/geocoder/CMakeLists.txt
+++ b/geocoder/CMakeLists.txt
@@ -21,7 +21,13 @@ set(
 )
 
 omim_add_library(${PROJECT_NAME} ${SRC})
-omim_link_libraries(${PROJECT_NAME} base indexer jansson)
+omim_link_libraries(
+  ${PROJECT_NAME}
+  base
+  indexer
+  jansson
+  ${Boost_SERIALIZATION_LIBRARY}
+  ${Boost_IOSTREAMS_LIBRARY})
 
 add_subdirectory(geocoder_cli)
 omim_add_test_subdirectory(geocoder_tests)
