[build] SKIP_TESTS target fixed

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -75,7 +75,7 @@ elseif(${PLATFORM_LINUX})
   )
 endif()
 
-add_subdirectory(platform_tests_support)
+omim_add_test_subdirectory(platform_tests_support)
 
 omim_add_library(${PROJECT_NAME} ${SRC})
 omim_link_libraries(${PROJECT_NAME} base coding jansson ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
