--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: configure
-      run: cmake .
+      run: cmake -DBOOST_ROOT=$BOOST_ROOT .
     - name: make
       run: make
     - name: make test
