--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -4,16 +4,14 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-    
+    runs-on: ubuntu-18.04
+   
     steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-    - name: configure
-      run: cmake -DBOOST_ROOT=$BOOST_ROOT .
+    - uses: actions/checkout@v1 actions/checkout-submodules@v2
+    - name: cmake
+      run: cmake -DBOOST_ROOT=${BOOST_ROOT} . 
     - name: make
       run: make
     - name: make test
-      run: make test
+      run: env CTEST_OUTPUT_ON_FAILURE=1 make test
+
