--- a/geocoder/geocoder_cli/CMakeLists.txt
+++ b/geocoder/geocoder_cli/CMakeLists.txt
@@ -5,9 +5,9 @@ set(
   geocoder_cli.cpp
 )
 
-omim_add_executable(${PROJECT_NAME} ${SRC})
+geocore_add_executable(${PROJECT_NAME} ${SRC})
 
-omim_link_libraries(
+geocore_link_libraries(
   ${PROJECT_NAME}
   geocoder
   gflags
