--- a/geometry/geometry_tests/CMakeLists.txt
+++ b/geometry/geometry_tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(geometry_tests)
 
-add_definitions(-DOMIM_UNIT_TEST_DISABLE_PLATFORM_INIT)
+add_definitions(-DGEOCORE_UNIT_TEST_DISABLE_PLATFORM_INIT)
 
 set(
   SRC
@@ -41,5 +41,5 @@ set(
   vector_test.cpp
 )
 
-omim_add_test(${PROJECT_NAME} ${SRC})
-omim_link_libraries(${PROJECT_NAME} geometry base)
+geocore_add_test(${PROJECT_NAME} ${SRC})
+geocore_link_libraries(${PROJECT_NAME} geometry base)
