--- a/generator/generator_tool/CMakeLists.txt
+++ b/generator/generator_tool/CMakeLists.txt
@@ -2,8 +2,8 @@ project(generator_tool)
 
 set(SRC generator_tool.cpp)
 
-omim_add_executable(${PROJECT_NAME} ${SRC})
-omim_link_libraries(
+geocore_add_executable(${PROJECT_NAME} ${SRC})
+geocore_link_libraries(
   ${PROJECT_NAME}
   generator
   geocoder
