--- a/xcode/common.xcconfig
+++ b/xcode/common.xcconfig
@@ -1,11 +1,11 @@
 CURRENT_PROJECT_VERSION = 9.2.0
 
 // Paths
-OMIM_ROOT = $(PROJECT_DIR)/../..
+GEOCORE_ROOT = $(PROJECT_DIR)/../..
 QT_PATH = /usr/local/opt/qt5
-BOOST_ROOT = $(OMIM_ROOT)/3party/boost
+BOOST_ROOT = $(GEOCORE_ROOT)/3party/boost
 
-HEADER_SEARCH_PATHS = $(inherited) $(OMIM_ROOT) $(BOOST_ROOT)
+HEADER_SEARCH_PATHS = $(inherited) $(GEOCORE_ROOT) $(BOOST_ROOT)
 FRAMEWORK_SEARCH_PATHS[sdk=macosx*] = $(QT_PATH)/lib
 
 // Deployment target
