--- a/geocoder/geocoder_cli/CMakeLists.txt
+++ b/geocoder/geocoder_cli/CMakeLists.txt
@@ -9,6 +9,6 @@ geocore_add_executable(${PROJECT_NAME} ${SRC})
 
 geocore_link_libraries(
   ${PROJECT_NAME}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY}
   geocoder
-  gflags
 )
